# GSAcoin

./: CMakeLists.txt  CONTRIBUTING.md  INSTALL  Jenkinsfile  Makefile.am  build_linux.sh  build_macos.sh  build_windows.sh  configure.ac
build-aux/m4/: bitcoin_qt.m4
build-aux/snap/: snapcraft.yaml
contrib/: gitian-build.py  gsa-cli.bash-completion  gsa-qt.pro  gsa-tx.bash-completion  gsad.bash-completion  install_db4.sh  valgrind.supp
contrib/debian/: README.md  changelog  control  gsa-qt.desktop  gsa-qt.install  gsa-qt.lintian-overrides  gsa-qt.manpages  gsa-qt.protocol  gsad.bash-completion  gsad.examples  gsad.install  gsad.lintian-overrides  gsad.manpages  gsad.postinst  gsad.postrm  gsad.service  rules  watch
contrib/devtools/: README.md  check-doc.py  copyright_header.py  gen-manpages.sh  update-translations.py
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/init/: README.md  gsad.conf  gsad.init  gsad.openrc  gsad.openrcconf  gsad.service  org.gsa.gsad.plist
contrib/innosetup/: README.md  setup.iss
contrib/macdeploy/: README.md  custom_dsstore.py  detached-sig-create.sh  fancy.plist  macdeployqtplus
contrib/masternodesetup/: README.md  masternodesetup.sh
contrib/qos/: README.md
contrib/rpm/: gsa.fc  gsa.if  gsa.spec  gsa.te
contrib/seeds/: README.md  makeseeds.py
contrib/spendfrom/: README.md  spendfrom.py
doc/: Doxyfile.in  README.md  README_windows.txt  REST-interface.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  release-process.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/gitian-building/: gitian-building-mac-os-sdk.md  gitian-setup-fedora.md  gitian-setup-mac.md  gitian-setup-ubuntu.md  gitian-setup-windows.md
doc/man/: Makefile.am  gsa-cli.1  gsa-qt.1  gsa-tx.1  (+1 more)
old/: Makefile  README.md
share/: setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  addrdb.cpp  addrdb.h  addressbook.cpp  addressbook.h  addrman.cpp  addrman.h  allocators.cpp  allocators.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  bech32.cpp  bech32.h  bip38.cpp  bip38.h  blob_uint256.cpp  blob_uint256.h  blocksignature.cpp  blocksignature.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  checkpoints.cpp  checkpoints.h  (+137 more)
src/qt/: CMakeLists.txt  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoinaddressvalidator.cpp  bitcoinaddressvalidator.h  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  gsa.cpp  gsa.qrc  gsa_locale.qrc  gsastrings.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  networkstyle.h  notificator.cpp  notificator.h  (+38 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  rpcconsole.ui
src/qt/gsa/: addnewaddressdialog.cpp  addnewaddressdialog.h  addnewcontactdialog.cpp  addnewcontactdialog.h  addresseswidget.cpp  addresseswidget.h  addressfilterproxymodel.cpp  addressfilterproxymodel.h  addressholder.cpp  addressholder.h  addresslabelrow.cpp  addresslabelrow.h  contactdropdownrow.cpp  contactdropdownrow.h  contactsdropdown.cpp  contactsdropdown.h  dashboardwidget.cpp  dashboardwidget.h  defaultdialog.cpp  defaultdialog.h  expandablebutton.cpp  expandablebutton.h  focuseddialog.cpp  focuseddialog.h  furabstractlistitemdelegate.cpp  furabstractlistitemdelegate.h  furlistrow.h  gsagui.cpp  gsagui.h  guitransactionsutils.cpp  guitransactionsutils.h  loadingdialog.cpp  loadingdialog.h  lockunlock.cpp  lockunlock.h  masternodeswidget.cpp  masternodeswidget.h  masternodewizarddialog.cpp  masternodewizarddialog.h  mninfodialog.cpp  (+47 more)
src/qt/gsa/forms/: addresseswidget.ui  dashboardwidget.ui  masternodeswidget.ui  masternodewizarddialog.ui  receivewidget.ui  requestdialog.ui  send.ui  sendchangeaddressdialog.ui  sendcustomfeedialog.ui  sendmultirow.ui  topbar.ui  welcomecontentwidget.ui
src/qt/gsa/res/css/: style_dark.css  style_light.css
src/qt/gsa/settings/: settingsbackupwallet.cpp  settingsbackupwallet.h  settingsbittoolwidget.cpp  settingsbittoolwidget.h  settingsconsolewidget.cpp  settingsconsolewidget.h  settingsdisplayoptionswidget.cpp  settingsdisplayoptionswidget.h  settingsexportcsv.cpp  settingsexportcsv.h  settingsfaqwidget.cpp  settingsfaqwidget.h  settingsinformationwidget.cpp  settingsinformationwidget.h  settingsmainoptionswidget.cpp  settingsmainoptionswidget.h  settingsmultisenddialog.cpp  settingsmultisenddialog.h  settingsmultisendwidget.cpp  settingsmultisendwidget.h  settingsnetworkwidget.cpp  settingsnetworkwidget.h  settingssignmessagewidgets.cpp  settingssignmessagewidgets.h  settingswalletoptionswidget.cpp  settingswalletoptionswidget.h  settingswalletrepairwidget.cpp  settingswalletrepairwidget.h  settingswidget.cpp  settingswidget.h
src/qt/gsa/settings/forms/: settingsbittoolwidget.ui  settingsfaqwidget.ui  settingssignmessagewidgets.ui  settingswidget.ui
src/qt/locale/: gsa_de.ts  gsa_en.ts  gsa_en_US.ts  gsa_es.ts  gsa_es_ES.ts  gsa_fr_FR.ts  gsa_hr_HR.ts  gsa_it.ts  gsa_ko_KR.ts  gsa_nl.ts  gsa_pl.ts  gsa_ru.ts  gsa_tr.ts  gsa_zh_CN.ts
src/qt/res/: gsa-qt-res.rc
src/qt/res/css/: default.css
src/qt/res/icons/: bitcoin.icns
src/qt/test/: paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
test/: README.md
(+301 files in other folders)
